Добавил интерфейс для сообщений. Переделал механизмы отправки-получения сообщений под использование интерфейса. Подправил логическую структуру серверной части. Исправил найденные ошибки.