@@ -3,7 +3,9 @@ package ru.gvg.serverside;
 import javax.crypto.*;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
+import java.nio.charset.StandardCharsets;
 import java.security.*;
+import java.util.Base64;
 
 public class MyDropBoxSecurity {
 
@@ -15,7 +17,7 @@ public class MyDropBoxSecurity {
     /**
      * Constructor, initializing a pair of secret keys.
      *
-     * @throws NoSuchAlgorithmException
+     * @throws NoSuchAlgorithmException Possible exception.
      */
     public MyDropBoxSecurity() throws NoSuchAlgorithmException {
         KeyPairGenerator keyPairGenerator = KeyPairGenerator.getInstance("RSA");
@@ -23,7 +25,7 @@ public class MyDropBoxSecurity {
     }
 
     /**
-     * Metod returns public key for encryption.
+     * Method returns public key for encryption.
      *
      * @return Public key.
      */
@@ -32,7 +34,7 @@ public class MyDropBoxSecurity {
     }
 
     /**
-     * Metod encrypt incoming string.
+     * Method encrypts incoming string.
      *
      * @param str Plain text string.
      * @param key Public key.
@@ -46,25 +48,17 @@ public class MyDropBoxSecurity {
             ecipher.init(Cipher.ENCRYPT_MODE, key);
             byte[] utf8 = str.getBytes("UTF8");
             byte[] enc = ecipher.doFinal(utf8);
-            encrypted = new sun.misc.BASE64Encoder().encode(enc);
-        } catch (NoSuchAlgorithmException e) {
-            e.printStackTrace();
-        } catch (NoSuchPaddingException e) {
-            e.printStackTrace();
-        } catch (BadPaddingException e) {
-            e.printStackTrace();
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        } catch (IllegalBlockSizeException e) {
-            e.printStackTrace();
-        } catch (InvalidKeyException e) {
+            encrypted = new String(java.util.Base64.getMimeEncoder().encode(enc),
+                    StandardCharsets.UTF_8);
+        } catch (NoSuchAlgorithmException | NoSuchPaddingException | BadPaddingException
+                | UnsupportedEncodingException | IllegalBlockSizeException | InvalidKeyException e) {
             e.printStackTrace();
         }
         return encrypted;
     }
 
     /**
-     * Metod decrypt incoming string.
+     * Method decrypts incoming string.
      *
      * @param str Encrypted string in the format Base64.
      * @return Decrypted string.
@@ -75,20 +69,11 @@ public class MyDropBoxSecurity {
         try {
             Cipher dcipher = Cipher.getInstance("RSA");
             dcipher.init(Cipher.DECRYPT_MODE, keyPair.getPrivate());
-            byte[] dec = new sun.misc.BASE64Decoder().decodeBuffer(str);
+            byte[] dec = Base64.getMimeDecoder().decode(str);
             byte[] utf8 = dcipher.doFinal(dec);
             decrypted = new String(utf8, "UTF8");
-        } catch (NoSuchAlgorithmException e) {
-            e.printStackTrace();
-        } catch (NoSuchPaddingException e) {
-            e.printStackTrace();
-        } catch (IOException e) {
-            e.printStackTrace();
-        } catch (InvalidKeyException e) {
-            e.printStackTrace();
-        } catch (IllegalBlockSizeException e) {
-            e.printStackTrace();
-        } catch (BadPaddingException e) {
+        } catch (NoSuchAlgorithmException | NoSuchPaddingException | IOException | InvalidKeyException
+                | IllegalBlockSizeException | BadPaddingException e) {
             e.printStackTrace();
         }
         return decrypted;
